Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.0.0
-
Fix Version/s: 5.3.0
-
Component/s: GUI: Window management
-
Labels:None
-
Environment:OS X Lion, Xcode 4.3.2, clang 3.1
-
Platform/s:
-
Commits:bdd3ead8270dfde12b0b4eb57125a22e51ee88ce
Description
The fullscreen transitions in this test function cause a Cocoa warning and a test failure:
2012-06-06 11:21:16.627 tst_qwindow[42211:703] not in fullscreen state
FAIL! : tst_QWindow::positioning() Compared values are not the same
Actual (originalPos): QPoint(0,1010)
Expected (window.pos()): QPoint(0,0)
Loc: [tst_qwindow.cpp(198)]
When this happens, isActive() also fails:
FAIL! : tst_QWindow::isActive() Compared values are not the same
Actual (window.received(QEvent::Resize)): 4
Expected (1): 1
Loc: [tst_qwindow.cpp(255)]
Note that isActive() does not fail if positioning() is skipped.
Attachments
Issue Links
- depends on
-
QTBUG-21607 Lion fullscreen support
-
- Closed
-
- is required for
-
QTBUG-24131 Autotests for Qt 5.0 on OSX
-
- Closed
-